<resources>
    <string name="app_name">Calculatrice version 2</string>
    <string name="resultat">résultat</string>
    <string name="calculer">Calculer</string>
    <string name="retour">Retour</string>
    <string name="zero">0</string>
    <string name="un">1</string>
    <string name="deux">2</string>
    <string name="trois">3</string>
    <string name="quatre">4</string>
    <string name="cinq">5</string>
    <string name="six">6</string>
    <string name="sept">7</string>
    <string name="huit">8</string>
    <string name="neuf">9</string>
    <string name="moins">-</string>
    <string name="plus">+</string>
    <string name="fois">×</string>
    <string name="div">÷</string>
    <string name="vergule">.</string>
    <string name="egale">=</string>
    <string name="mod">mod</string>
    <string name="effacer">C</string>
    <string name="parentheseG">(</string>
    <string name="parentheseD">)</string>

    <string name="cos">cos()</string>
    <string name="sin">sin()</string>
    <string name="Pi">π</string>
    <string name="puiss">^</string>
    <string name="racineCarré">√ </string>
    <string name="ln">ln</string>
    <string name="factorielle">n!</string>
    <string name="exp">e</string>
    <string name="tan">tan()</string>




</resources>
